--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@auth/prisma-adapter": "^1.3.3",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.9.1",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -23,6 +25,7 @@
     "clsx": "^2.1.0",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.9",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
