--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
+    "framer-motion": "^11.0.7",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.13",
     "next-themes": "^0.2.1",
