--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.7",
+    "input-otp": "^1.1.0",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.13",
     "next-themes": "^0.2.1",
