--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "email": "email dev --port 4000"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.3.3",
@@ -24,6 +25,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-email/components": "0.0.15",
     "@svgr/webpack": "^8.1.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -41,6 +43,7 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-email": "2.1.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "resend": "^3.2.0",
