--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "resend": "^3.2.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "typewriter-effect": "^2.21.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
