--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cloudinary": "^2.0.3",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
+    "crisp-sdk-web": "^1.0.22",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.7",
     "input-otp": "^1.1.0",
