--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@prisma/client": "^5.9.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -28,6 +31,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@react-email/components": "0.0.15",
     "@svgr/webpack": "^8.1.0",
+    "@uploadthing/react": "^6.4.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -38,7 +42,7 @@
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.7",
     "input-otp": "^1.1.0",
-    "next": "14.1.0",
+    "next": "^14.1.0",
     "next-auth": "^5.0.0-beta.13",
     "next-themes": "^0.2.1",
     "react": "^18",
@@ -48,10 +52,13 @@
     "react-email": "2.1.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "resend": "^3.2.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "typewriter-effect": "^2.21.0",
+    "uploadthing": "^6.9.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
