--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
     "@react-email/components": "0.0.15",
-    "@svgr/webpack": "^8.1.0",
     "@uploadthing/react": "^6.4.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -55,6 +54,7 @@
     "react-spinners": "^0.13.8",
     "resend": "^3.2.0",
     "sonner": "^1.4.41",
+    "swiper": "^11.1.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "typewriter-effect": "^2.21.0",
