--- a/package.json
+++ b/package.json
@@ -43,14 +43,14 @@
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.7",
     "input-otp": "^1.1.0",
-    "next": "^14.1.0",
+    "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.13",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
-    "react-email": "2.1.0",
+    "react-email": "^2.1.2",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-spinners": "^0.13.8",
@@ -62,7 +62,7 @@
     "typewriter-effect": "^2.21.0",
     "uploadthing": "^6.9.0",
     "uuid": "^9.0.1",
-    "zod": "^3.22.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
