--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "typewriter-effect": "^2.21.0",
     "uploadthing": "^6.9.0",
     "uuid": "^9.0.1",
+    "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
