--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cmdk": "^0.2.1",
     "crisp-sdk-web": "^1.0.22",
     "date-fns": "^3.3.1",
+    "embla-carousel-react": "^8.1.3",
     "framer-motion": "^11.0.7",
     "input-otp": "^1.1.0",
     "next": "^14.2.3",
