added leaflet map for detail and search page

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-email/components": "0.0.15",
     "@uploadthing/react": "^6.4.4",
+    "@vercel/edge": "^1.1.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -44,6 +45,8 @@
     "embla-carousel-react": "^8.1.3",
     "framer-motion": "^11.0.7",
     "input-otp": "^1.1.0",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.13",
     "next-themes": "^0.2.1",
@@ -54,7 +57,9 @@
     "react-email": "^2.1.2",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1",
     "react-spinners": "^0.13.8",
+    "react-virtuoso": "^4.7.11",
     "resend": "^3.2.0",
     "sonner": "^1.4.41",
     "swiper": "^11.1.1",
@@ -69,6 +74,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
